--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,7 @@ en:
     resource_not_found: 'Resource not found'
     request_missing_parameters: 'Request is missing required parameters'
     service_failed_data_fetch: 'The geolocation service failed to fetch the data, try again.'
+    invalid_api_key: 'No API Key or invalid API Key provided in the request'
   activerecord:
     errors:
       models:
